# CSR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CSRConfig.hpp.in  README.md  TODO.md  build.sh  test.sh  ü
docs/: BUILD.md  DOCUMENTATION.md
examples/: .gitignore  Makefile
examples/extenders/: alltests.sh  extender.jasm
examples/extenders/c/: Makefile  extender.c
examples/extenders/cpp/: Makefile  extender.cpp
examples/extenders/odin/: Makefile  extender.odin
examples/extenders/rust/: Makefile  extender.rs
include/: csr.hpp  message.hpp  platform.hpp  slice.hpp  system.hpp  vm.hpp
include/bytemode/: assembly.hpp  board.hpp  cpu.hpp  instructions.hpp  process.hpp  ram.hpp  rom.hpp  slice.hpp  syscall.hpp
include/extensions/: converters.hpp  serialization.hpp  streamextensions.hpp  stringextensions.hpp  syntaxextensions.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/bytemode/: CMakeLists.txt  assembly.cpp  board.cpp  cpu.cpp  instructions.cpp  process.cpp  ram.cpp  rom.cpp  slice.cpp  syscall.cpp
src/core/: CMakeLists.txt  csr.cpp  message.cpp  platform.cpp  slice.cpp  system.cpp  vm.cpp
src/extensions/: CMakeLists.txt  stringextensions.cpp
